--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
     <name>51burguer</name>
     <description>sistema para pedidos de lanche</description>
     <properties>
-        <java.version>22</java.version>
+          <java.version>22</java.version>
         <maven.compiler.release>22</maven.compiler.release>
         <sonar.organization>fiapteam51</sonar.organization>
+        <sonar.projectKey>fiapteam51_payment51burguer</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
