--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: ..
       dockerfile: Docker/Dockerfile
-    image: 51-burguer-app
+    image: client-51-burguer-app
     restart: always
     ports:
       - "8787:8080"
