--- a/.github/workflows/Deploy-eks.yaml
+++ b/.github/workflows/Deploy-eks.yaml
@@ -32,13 +32,13 @@ jobs:
       - name: Package & Tag
         run: | 
           docker compose -f Docker/docker-compose.yml build web
-          docker tag docker.io/library/51-burguer-app 375275125343.dkr.ecr.us-east-1.amazonaws.com/51burguer-image:latest
+          docker tag client-51-burguer-app:latest ${{ secrets.REPO_ECR }}/client-51-burguer-app:latest
           docker ps
 
       - name: Push to ECR
         run: |
           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 375275125343.dkr.ecr.us-east-1.amazonaws.com
-          docker push 375275125343.dkr.ecr.us-east-1.amazonaws.com/51burguer-image:latest
+          docker push ${{ secrets.REPO_ECR }}/client-51-burguer-app:latest:latest
           
 
       - name: Kube Secrets
