--- a/k8s/service-burguer-app.yaml
+++ b/k8s/service-burguer-app.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: burguer-app
+    app: client-burguer-app
   name: client-burguer-app
 spec:
   type: LoadBalancer
@@ -14,9 +14,9 @@ spec:
   ipFamilyPolicy: SingleStack
   ports:
   - nodePort: 30790
-    port: 8081
+    port: 80
     protocol: TCP
     targetPort: 8081
   selector:
-    app: burguer-app
+    app: client-burguer-app
   sessionAffinity: None
